--- a/search.html
+++ b/search.html
@@ -6,7 +6,7 @@
                gcse.src   = 'https://cse.google.com/cse.js?cx=' + cx;
                var s = document.getElementsByTagName('script')[0];
                s.parentNode.insertBefore(gcse, s);
-            })();</script><gcse:searchresults-only></gcse:searchresults-only></div></article></main><footer class="footer"><div class="footer__copyright"><p>© &lt;script&gt;document.write(new Date().getFullYear())&lt;/script&gt; John Higham - All rights reserved.</p></div><button class="footer__bttop js-footer__bttop" aria-label="Back to top"><svg><title>Back to top</title><use xlink:href="https://webdev-jh.github.io/publii-1-johnhigham-blog/assets/svg/svg-map.svg#toparrow"/></svg></button></footer></div><script>window.publiiThemeMenuConfig = {    
+            })();</script><gcse:searchresults-only></gcse:searchresults-only></div></article></main><footer class="footer"><div class="footer__copyright"><p>© 2020 John Higham - All rights reserved.</p></div><button class="footer__bttop js-footer__bttop" aria-label="Back to top"><svg><title>Back to top</title><use xlink:href="https://webdev-jh.github.io/publii-1-johnhigham-blog/assets/svg/svg-map.svg#toparrow"/></svg></button></footer></div><script>window.publiiThemeMenuConfig = {    
         mobileMenuMode: 'sidebar',
         animationSpeed: 300,
         submenuWidth: 'auto',
